--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -19,8 +19,12 @@ assign [class="YouTube Music Desktop App"] workspace 4
 
 # Workspace 5: Games
 exec --no-startup-id steam
-assign [class="steam"] workspace 5
-assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
+assign [class="steam"] workspace 9
+assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 9
+
+# Workspace 10: Discord
+exec --no-startup-id discord
+assign [class="discord" title="Friends - Discord"] workspace 10
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
