--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -103,6 +103,7 @@ bindsym Mod4+v exec copyq show
 
 # hide all
 bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
+# bindsym --release button10 exec --no-startup-id ~/bin/.local/scripts/hide-desktop
 
 # enable/disable picom
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
