--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set-option -a terminal-features "screen-256color"
-set-option -a terminal-overrides ",xterm-256color:Tc"
+set-option -a terminal-features 'xterm-256color:RGB'
+# set-option -a terminal-features 'alacritty:RGB'
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
