--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -4,7 +4,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_SINK
 bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
 
 # start a terminal
-bindsym $mod+Return exec ~/bin/.local/scripts/2nd-monitor-alacritty
+# bindsym $mod+Return exec ~/bin/.local/scripts/2nd-monitor-alacritty
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -108,8 +109,8 @@ bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
 # enable/disable picom
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
-# open thunar
-bindsym $mod+n exec thunar
+# open nemo
+bindsym $mod+n exec nemo
 
 # open notes
-bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e bash -c "cd ~/Documents/notes &&  vim ." 
+bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/Documents/notes &&  vim ." 
