--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -21,9 +21,12 @@ assign [class="discord" title="Friends - Discord"] workspace 10
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "secondary" --command sh -c 'btop; exec bash'
+# exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec bash'
+# exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec bash'
+
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "cava" --command sh -c 'cava; exec bash'
 # exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "cava" --command sh -c 'cava; exec bash'
 
 for_window [class="Alacritty" title="secondary"] move to workspace 11
 for_window [class="Alacritty" title="notes"] move to workspace 11
