--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -13,7 +13,7 @@ fade-delta = 4;
 no-fading-openclose = false;
 
 # opacity
-inactive-opacity = 0.9;
+inactive-opacity = 0.95;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -25,37 +25,31 @@ opacity-rule = [
     "90:class_g = 'Spotify'",
     "90:class_g = 'YouTube Music Desktop App'",
     "90:class_g = 'steam'",
+    "100:class_g = 'jetbrains-studio'",
+    "100:class_g = 'Emulator'",
     "100:class_g = 'Google-chrome'",
+    "100:class_g = 'Microsoft-edge'",
     "100:class_g = 'Brave-browser'",
     "100:class_g = 'firefox'",
     "100:class_g = 'discord'",
     "100:class_g = 'i3lock'",
     "100:class_g = 'Alacritty'",
     "100:class_g = 'VirtualBox Machine'",
-    "100:class_g = 'VirtualBox Manager'"
+    "100:class_g = 'VirtualBox Manager'",
+    "100:class_g = 'libreoffice-writer'"
 ];
 
 # opacity-rule = [
-#     "100:name = 'Messenger call - Google Chrome'",
-#     "95:class_g = 'Thunar'",
-#     "90:class_g = 'URxvt'",
-#     "90:class_g = 'Google-chrome'",
-#     "95:class_g = 'firefox'",
-#     "90:class_g = 'discord'",
-#     "100:class_g = 'i3lock'",
-#     "90:class_g = 'thunderbird'",
-#     "90:class_g = 'Spotify'",
-#     "90:class_g = 'steam'",
-#     "100:class_g = 'Alacritty'"
+#     "85:class_g = 'Google-chrome'",
 # ];
 
-# # blur
-# blur-background = true;
-# blur-method = "dual_kawase";
-# blur-strength = 4;
-# blur-background-exclude = [
-#     "window_type = 'menu'",
-#     "window_type = 'dropdown_menu'",
-#     "window_type = 'popup_menu'",
-#     "window_type = 'tooltip'"
-# ];
+# blur
+blur-background = true;
+blur-method = "dual_kawase";
+blur-strength = 2;
+blur-background-exclude = [
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'"
+];
