--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -91,7 +91,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # open browser
-bindsym $mod+g exec brave-browser
+bindsym $mod+g exec brave
 
 # screen lock keybind
 bindsym Control+Mod1+l exec ~/bin/.local/scripts/lock-screen
@@ -113,4 +113,4 @@ bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 bindsym $mod+n exec nemo
 
 # open notes
-bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/Documents/notes &&  vim ." 
+bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/documents/notes &&  vim ." 
