--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -4,7 +4,7 @@
 exec --no-startup-id alacritty --config-file ~/.config/alacritty/alacritty.toml --title "primary" 
 
 # Workspace 2: Browser
-exec --no-startup-id brave-browser --new-window
+exec --no-startup-id brave --new-window
 
 # Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
@@ -21,12 +21,12 @@ assign [class="discord" title="Friends - Discord"] workspace 10
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
-# exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec bash'
-# exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec bash'
 
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "secondary" --command sh -c 'btop; exec bash'
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "cava" --command sh -c 'cava; exec bash'
-# exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
+# exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "secondary" --command sh -c 'btop; exec bash'
+# exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "cava" --command sh -c 'cava; exec bash'
+# exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/documents/notes && exec bash" 
 
 for_window [class="Alacritty" title="secondary"] move to workspace 11
 for_window [class="Alacritty" title="notes"] move to workspace 11
