--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -20,7 +20,7 @@ exec --no-startup-id discord
 assign [class="discord" title="Friends - Discord"] workspace 10
 
 # Workspace 11: Secondary
-exec --no-startup-id google-chrome messenger.com --new-window 
+exec --no-startup-id google-chrome-stable messenger.com --new-window 
 exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec bash'
 
