--- a/i3/config
+++ b/i3/config
@@ -100,6 +100,7 @@ for_window [class="gnome-calendar"] floating enabled
 for_window [class="Blueman-manager"] floating enabled
 for_window [class="PacketTracer"] floating enabled
 for_window [class="firefox" title="Library"] floating enabled
+for_window [class="pavucontrol"] floating enabled
 
 for_window [class="KeePassXC"] floating enabled
 for_window [class="KeePassXC"] resize set 1000 800
