this is so addicting

--- a/desktop/.config/i3/remap.conf
+++ b/desktop/.config/i3/remap.conf
@@ -11,7 +11,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec env GTK_THEME=Adwaita:dark QT_STYLE_OVERRIDE=Adwaita-Dark rofi -show run -monitor $pm
+bindsym $mod+d exec rofi -show drun -monitor $pm
 
 # change focus
 bindsym $mod+h focus left
@@ -110,7 +110,7 @@ bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
 # open nemo
-bindsym $mod+n exec env GTK_THEME=Adwaita:dark QT_STYLE_OVERRIDE=Adwaita-Dark nemo
+bindsym $mod+n exec nemo
 
 # open notes
-bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/documents/notes &&  vim ." 
+bindsym $mod+i exec alacritty -o 'window.opacity=0.95' --title "calendar" -e zsh -ic "calcurse" 
