some minor changes

--- a/common/.config/picom/picom.conf
+++ b/common/.config/picom/picom.conf
@@ -27,7 +27,7 @@ opacity-rule = [
     "90:class_g = 'steam'",
     "100:class_g = 'jetbrains-studio'",
     "100:class_g = 'Emulator'",
-    "100:class_g = 'Google-chrome'",
+    "100:class_g = 'LibreWolf'",
     "100:class_g = 'Microsoft-edge'",
     "100:class_g = 'Brave-browser'",
     "100:class_g = 'firefox'",
