--- a/desktop/.config/i3/startup.conf
+++ b/desktop/.config/i3/startup.conf
@@ -20,9 +20,9 @@ exec --no-startup-id discord
 assign [class="discord" title="Friends - Discord"] workspace 10
 
 # Workspace 11: Secondary
-exec --no-startup-id google-chrome-stable messenger.com --new-window 
-exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec bash'
-exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec bash'
+exec --no-startup-id librewolf messenger.com --new-window 
+exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec zsh'
+exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec zsh'
 
 # exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "secondary" --command sh -c 'btop; exec bash'
 # exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "cava" --command sh -c 'cava; exec bash'
@@ -33,10 +33,10 @@ for_window [class="Alacritty" title="notes"] move to workspace 11
 for_window [class="Alacritty" title="cava"] move to workspace 11
 
 # Workspace 12: Music
-exec --no-startup-id spotify
-exec --no-startup-id youtube-music-desktop-app
+exec --no-startup-id spotify-launcher
+exec --no-startup-id youtube-music
 
 assign [class="Spotify"] workspace 12
-assign [class="YouTube Music Desktop App"] workspace 12
+assign [class="com.github.th_ch.youtube_music"] workspace 12
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement
