--- a/desktop/.config/i3/remap.conf
+++ b/desktop/.config/i3/remap.conf
@@ -4,8 +4,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_SINK
 bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
 
 # start a terminal
-# bindsym $mod+Return exec ~/bin/.local/scripts/2nd-monitor-alacritty
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec ~/bin/.local/scripts/2nd-monitor-alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
