trying to make rounded borders work!!!

--- a/common/.config/picom/picom.conf
+++ b/common/.config/picom/picom.conf
@@ -7,6 +7,16 @@ glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
 
+corner-radius = 20
+rounded-corners-exclude = [ 
+    "class_g = 'Polybar'",
+    "class_g = 'i3-frame'",
+];
+
+# corner-radius-rules = [
+#     "10:class_g = 'Dunst'",
+# ]
+
 # fade
 fading = true;
 fade-delta = 4;
@@ -39,10 +49,6 @@ opacity-rule = [
     "100:class_g = 'libreoffice-writer'"
 ];
 
-# opacity-rule = [
-#     "85:class_g = 'Google-chrome'",
-# ];
-
 # blur
 blur-background = true;
 blur-method = "dual_kawase";
@@ -51,5 +57,8 @@ blur-background-exclude = [
     "window_type = 'menu'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'",
-    "window_type = 'tooltip'"
+    "window_type = 'tooltip'",
+    "class_g = 'Rofi'",
+    "class_g = 'Polybar'",
+    "role = 'xborder'"
 ];
