--- a/desktop/.config/i3/rose-pine.conf
+++ b/desktop/.config/i3/rose-pine.conf
@@ -14,12 +14,23 @@ set $iris           #c4a7e7
 set $highlightlow   #21202e
 set $highlightmed   #403d52
 set $highlighthigh  #524f67
+set $none           #00000000
 
 # Teming border and Windows --------------
 # target                 title     bg    text   indicator  border
-client.focused           $rose     $base $text  $rose      $rose
-client.focused_inactive  $text     $base $text  $subtle    $surface
-client.unfocused         $text     $base $text  $overlay   $overlay
-client.urgent            $text     $base $text  $love      $love
-client.placeholder       $base     $base $text  $overlay   $overlay
-client.background        $base                             $overlay   
+client.focused           $none     $none $none  $none      $none
+client.focused_inactive  $none     $none $none  $none      $none
+client.unfocused         $none     $none $none  $none      $none
+client.urgent            $none     $none $none  $none      $none
+client.placeholder       $none     $none $none  $none      $none
+client.background        $none     $none $none  $none      $none
+
+
+# # Teming border and Windows --------------
+# # target                 title     bg    text   indicator  border
+# client.focused           $rose     $base $text  $rose      $rose
+# client.focused_inactive  $text     $base $text  $subtle    $surface
+# client.unfocused         $text     $base $text  $overlay   $overlay
+# client.urgent            $text     $base $text  $love      $love
+# client.placeholder       $base     $base $text  $overlay   $overlay
+# client.background        $base                             $overlay   
