--- a/common/.config/picom/picom.conf
+++ b/common/.config/picom/picom.conf
@@ -13,9 +13,9 @@ rounded-corners-exclude = [
     "class_g = 'i3-frame'",
 ];
 
-# corner-radius-rules = [
-#     "10:class_g = 'Dunst'",
-# ]
+corner-radius-rules = [
+    "10:class_g = 'Dunst'",
+]
 
 # fade
 fading = true;
