--- a/desktop/.config/i3/rose-pine.conf
+++ b/desktop/.config/i3/rose-pine.conf
@@ -18,12 +18,12 @@ set $none           #00000000
 
 # Teming border and Windows --------------
 # target                 title     bg    text   indicator  border
-client.focused           $none     $none $none  $none      $none
-client.focused_inactive  $none     $none $none  $none      $none
-client.unfocused         $none     $none $none  $none      $none
-client.urgent            $none     $none $none  $none      $none
-client.placeholder       $none     $none $none  $none      $none
-client.background        $none     $none $none  $none      $none
+client.focused           $rose     $base $text  $none      $none
+client.focused_inactive  $text     $base $text  $none      $none
+client.unfocused         $text     $base $text  $none      $none
+client.urgent            $text     $base $text  $none      $none
+client.placeholder       $base     $base $text  $none      $none
+client.background        $base                  $none      $none
 
 
 # # Teming border and Windows --------------
