--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -79,6 +79,9 @@ workspace 1 gaps left 400
 # kill steam package install which causes problem on automation
 exec --no-startup-id ~/bin/.local/scripts/kill-steam-package-install
 
+# start copyq
+exec --no-startup-id copyq --start-server  && copyq hide
+
 # move discord
 exec --no-startup-id ~/bin/.local/scripts/move-discord
 
