--- a/desktop/.config/i3/startup.conf
+++ b/desktop/.config/i3/startup.conf
@@ -15,9 +15,9 @@ exec --no-startup-id steam
 assign [class="steam"] workspace 9
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 9
 
-# Workspace 10: Discord
-exec --no-startup-id discord
-assign [class="discord" title="Friends - Discord"] workspace 10
+# Workspace 10: Vesktop (Discord)
+exec --no-startup-id vesktop
+assign [class="vesktop"] workspace 10
 
 # Workspace 11: Secondary
 exec --no-startup-id librewolf messenger.com --new-window 
