--- a/laptop/.config/i3/remap.conf
+++ b/laptop/.config/i3/remap.conf
@@ -32,10 +32,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+| split h
+bindsym $mod+u split h
 
 # split in vertical orientation
-bindsym $mod+\ split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -85,16 +85,13 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # open browser
-bindsym $mod+g exec brave-browser
+bindsym $mod+g exec brave
 
 # screen lock keybind
-bindsym Control+Mod1+l exec "i3lock -e -f -c 000000 && sleep 1 && xset dpms force off"
+bindsym Control+Mod1+l exec ~/bin/.local/scripts/lock-screen
 
 # snip
 bindsym Mod4+Shift+s exec flameshot gui
-
-# open thunar
-bindsym $mod+n exec thunar
 
 # clipboard history
 bindsym Mod4+v exec copyq show
@@ -105,14 +102,17 @@ bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
 # enable/disable picom
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
+# open thunar
+bindsym $mod+n exec nemo
+
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +15%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 15%-
 
 # Touchpad controls
 bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
