--- a/laptop/.config/polybar/config.ini
+++ b/laptop/.config/polybar/config.ini
@@ -18,8 +18,12 @@ disabled = #6e6a86
 bottom = false
 monitor = eDP-1
 
-width = 100%
-height = 24pt
+width = 1890
+height = 30pt
+offset-x = 15px
+offset-y = 5pt
+radius = 18
+override-redirect = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -28,18 +32,19 @@ line-size = 3pt
 
 border-color = #00000000
 
-padding-left = 1
-padding-right = 2
+padding-left = 2
+padding-right = 3
 
 module-margin = 1
 
-separator = |
+;separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "CaskaydiaMonoNerdFont:pixelsize=13;0"
+font-0 = "CaskaydiaMonoNerdFont:pixelsize=12;3"
 
 modules-left = i3
-modules-right = systray cpu memory wlan pulseaudio date time battery
+modules-center = date time
+modules-right = systray pulseaudio temperature brightness battery powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -51,8 +56,74 @@ wm-restack = i3
 [module/systray]
 type = internal/tray
 
-format-margin = 8pt
+format-margin = 4pt
 tray-spacing = 16pt
+tray-size = 40%
+
+[module/temperature]
+type = custom/menu
+format-foreground = ${colors.foreground}
+
+label-open = ""
+label-open-font = 4
+label-close = "    "
+label-close-foreground = ${colors.alert}
+label-separator = ""
+
+; low
+menu-0-0 = "   "
+menu-0-0-exec = redshift -x
+menu-0-0-foreground = ${colors.foreground}
+; mid
+menu-0-1 = "  "
+menu-0-1-exec = redshift -x && redshift -O 4000
+menu-0-1-foreground = ${colors.foreground}
+; high
+menu-0-2 = "  "
+menu-0-2-exec = redshift -x && redshift -O 3200
+menu-0-2-foreground = ${colors.foreground}
+
+[module/brightness]
+type = custom/menu
+format-foreground = ${colors.foreground}
+
+label-open = "󰃠 "
+label-open-font = 4
+label-close = "    "
+label-close-foreground = ${colors.alert}
+label-separator = ""
+
+; high
+menu-0-0 = "󰃠  "
+menu-0-0-exec = brightnessctl set 75%
+menu-0-0-foreground = ${colors.foreground}
+; mid
+menu-0-1 = "󰃟  "
+menu-0-1-exec = brightnessctl set 30%
+menu-0-1-foreground = ${colors.foreground}
+; low
+menu-0-2 = "󰃞  "
+menu-0-2-exec = brightnessctl set 10%
+menu-0-2-foreground = ${colors.foreground}
+
+[module/powermenu]
+type = custom/menu
+format-foreground = ${colors.primary}
+
+label-open = ""
+label-open-font = 4
+label-close = "  "
+label-close-foreground = ${colors.alert}
+label-separator = ""
+
+; reboot
+menu-0-1 = 
+menu-0-1-exec = systemctl reboot
+menu-0-1-foreground = ${colors.primary}
+; shutdown
+menu-0-0 = "  "
+menu-0-0-exec = systemctl poweroff
+menu-0-0-foreground = ${colors.primary}
 
 [module/i3]
 type = internal/i3
@@ -135,14 +206,14 @@ interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/time]
-format =   <label>
+format = <label>
 type = internal/date
 interval = 1
 time = %H:%M
 label = %time%
-
+#
 [module/date]
-format =   <label>
+format =   <label>
 type = internal/date
 interval = 1
 date = "%a, %b %d"
