config for laptop changes

--- a/laptop/.config/i3/remap.conf
+++ b/laptop/.config/i3/remap.conf
@@ -5,7 +5,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec rofi -show run -monitor $pm
+bindsym $mod+d exec rofi -show drun -monitor $pm
 
 # change focus
 bindsym $mod+h focus left
