--- a/laptop/.config/polybar/config.ini
+++ b/laptop/.config/polybar/config.ini
@@ -72,7 +72,7 @@ label-separator = ""
 
 ; low
 menu-0-0 = "   "
-menu-0-0-exec = redshift -x
+menu-0-0-exec = redshift -x && redshift -O 4800
 menu-0-0-foreground = ${colors.foreground}
 ; mid
 menu-0-1 = "  "
