--- a/arch/tlp.conf
+++ b/arch/tlp.conf
@@ -146,8 +146,8 @@ CPU_SCALING_GOVERNOR_ON_BAT=powersave
 #   EPP: amd-pstate driver in active mode ('amd-pstate-epp') as of kernel 6.3
 # Default: balance_performance (AC), balance_power (BAT)
 
-#CPU_ENERGY_PERF_POLICY_ON_AC=balance_performance
-CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
+CPU_ENERGY_PERF_POLICY_ON_AC=performance
+CPU_ENERGY_PERF_POLICY_ON_BAT=power
 
 # Set Intel CPU P-state performance: 0..100 (%).
 # Limit the max/min P-state to control the power dissipation of the CPU.
@@ -158,7 +158,7 @@ CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
 #CPU_MIN_PERF_ON_AC=0
 CPU_MAX_PERF_ON_AC=100
 #CPU_MIN_PERF_ON_BAT=0
-CPU_MAX_PERF_ON_BAT=80
+CPU_MAX_PERF_ON_BAT=45
 
 # Set the CPU "turbo boost" (Intel) or "core performance boost" (AMD) feature:
 #   0=disable, 1=allow.
@@ -355,13 +355,13 @@ PLATFORM_PROFILE_ON_BAT=low-power
 # Wi-Fi power saving mode: on=enable, off=disable.
 # Default: off (AC), on (BAT)
 
-#WIFI_PWR_ON_AC=off
-#WIFI_PWR_ON_BAT=on
+WIFI_PWR_ON_AC=off
+WIFI_PWR_ON_BAT=on
 
 # Disable Wake-on-LAN: Y/N.
 # Default: Y
 
-#WOL_DISABLE=Y
+WOL_DISABLE=Y
 
 # Enable audio power saving for Intel HDA, AC97 devices (timeout in secs).
 # A value of 0 disables, >= 1 enables power saving.
@@ -435,31 +435,31 @@ PLATFORM_PROFILE_ON_BAT=low-power
 #   0=do not exclude, 1=exclude.
 # Default: 1
 
-#USB_EXCLUDE_AUDIO=1
+USB_EXCLUDE_AUDIO=1
 
 # Exclude bluetooth devices from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 0
 
-#USB_EXCLUDE_BTUSB=0
+USB_EXCLUDE_BTUSB=0
 
 # Exclude phone devices from USB autosuspend:
 #   0=do not exclude, 1=exclude (enable charging).
 # Default: 0
 
-#USB_EXCLUDE_PHONE=0
+USB_EXCLUDE_PHONE=0
 
 # Exclude printers from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 1
 
-#USB_EXCLUDE_PRINTER=1
+USB_EXCLUDE_PRINTER=1
 
 # Exclude WWAN devices from USB autosuspend:
 #   0=do not exclude, 1=exclude.
 # Default: 0
 
-#USB_EXCLUDE_WWAN=0
+USB_EXCLUDE_WWAN=0
 
 # Allow USB autosuspend for listed devices even if already denylisted or
 # excluded above (separate with spaces). Use lsusb to get the ids.
@@ -490,7 +490,7 @@ PLATFORM_PROFILE_ON_BAT=low-power
 # Radio devices to enable on AC: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
+DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
 
 # Radio devices to disable on battery: bluetooth, nfc, wifi, wwan.
 # Default: <none>
@@ -501,7 +501,7 @@ PLATFORM_PROFILE_ON_BAT=low-power
 #   bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
 
 # Battery Care -- Charge thresholds
 # Charging starts when the charger is connected and the charge level
@@ -553,15 +553,15 @@ STOP_CHARGE_THRESH_BAT0=80
 
 # Radio devices to disable on connect.
 
-DEVICES_TO_DISABLE_ON_LAN_CONNECT="wifi"
-DEVICES_TO_DISABLE_ON_WIFI_CONNECT="wwan"
+#DEVICES_TO_DISABLE_ON_LAN_CONNECT="wifi wwan"
+#DEVICES_TO_DISABLE_ON_WIFI_CONNECT="wwan"
 #DEVICES_TO_DISABLE_ON_WWAN_CONNECT="wifi"
 
 # Radio devices to enable on disconnect.
 
-DEVICES_TO_ENABLE_ON_LAN_DISCONNECT="wifi"
-DEVICES_TO_ENABLE_ON_WIFI_DISCONNECT="wifi"
-#DEVICES_TO_ENABLE_ON_WWAN_DISCONNECT="wwan"
+#DEVICES_TO_ENABLE_ON_LAN_DISCONNECT="wifi wwan"
+#DEVICES_TO_ENABLE_ON_WIFI_DISCONNECT=""
+#DEVICES_TO_ENABLE_ON_WWAN_DISCONNECT=""
 
 # Radio devices to enable/disable when docked.
 
