--- a/common/.config/tmux/tmux.conf
+++ b/common/.config/tmux/tmux.conf
@@ -5,10 +5,6 @@ set-option -a terminal-features 'xterm-256color:RGB'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session'
-
 # theme
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha'
@@ -21,7 +17,7 @@ set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
 set -g status-bg default
 
-run '~/.config/tmux/plugins/tpm/tpm'
+run '/usr/share/tmux-plugin-manager/tpm'
 
 # vim mode
 set -g mode-keys vi
@@ -45,3 +41,4 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
