update tlp conf

--- a/arch/tlp.conf
+++ b/arch/tlp.conf
@@ -158,7 +158,7 @@ CPU_ENERGY_PERF_POLICY_ON_BAT=power
 #CPU_MIN_PERF_ON_AC=0
 CPU_MAX_PERF_ON_AC=100
 #CPU_MIN_PERF_ON_BAT=0
-CPU_MAX_PERF_ON_BAT=45
+CPU_MAX_PERF_ON_BAT=65
 
 # Set the CPU "turbo boost" (Intel) or "core performance boost" (AMD) feature:
 #   0=disable, 1=allow.
@@ -390,7 +390,7 @@ WOL_DISABLE=Y
 # Default: on (AC), auto (BAT)
 
 #RUNTIME_PM_ON_AC=on
-#RUNTIME_PM_ON_BAT=auto
+RUNTIME_PM_ON_BAT=auto
 
 # Exclude listed PCIe device adresses from Runtime PM.
 # Note: this preserves the kernel driver default, to force a certain state
@@ -527,9 +527,9 @@ DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
 # Default: <none>
 
 # Battery charge level below which charging will begin.
-START_CHARGE_THRESH_BAT0=75
+START_CHARGE_THRESH_BAT0=80
 # Battery charge level above which charging will stop.
-STOP_CHARGE_THRESH_BAT0=80
+STOP_CHARGE_THRESH_BAT0=85
 
 # BAT1: Secondary battery (primary on some laptops)
 # Default: <none>
