--- a/desktop/.config/i3/startup.conf
+++ b/desktop/.config/i3/startup.conf
@@ -11,7 +11,7 @@ exec --no-startup-id thunderbird
 assign [class="thunderbird"] workspace 3
 
 # Workspace 5: Games
-exec --no-startup-id steam
+# exec --no-startup-id steam
 assign [class="steam"] workspace 9
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 9
 
