--- a/laptop/.config/i3/remap.conf
+++ b/laptop/.config/i3/remap.conf
@@ -105,6 +105,9 @@ bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 # open thunar
 bindsym $mod+n exec nemo
 
+# open calcurse
+bindsym $mod+i exec alacritty --title "calendar" -e zsh -ic 'calcurse'
+
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
