--- a/desktop/.config/i3/remap.conf
+++ b/desktop/.config/i3/remap.conf
@@ -112,4 +112,7 @@ bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 bindsym $mod+n exec nemo
 
 # open notes
-bindsym $mod+i exec alacritty -o 'window.opacity=0.95' --title "calendar" -e zsh -ic "calcurse" 
+bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/documents/notes &&  vim todo.md" 
+
+# open calendar
+bindsym $mod+c exec alacritty -o 'window.opacity=1' --title "calendar" -e zsh -ic "calcurse" 
