--- a/laptop/.config/i3/remap.conf
+++ b/laptop/.config/i3/remap.conf
@@ -105,8 +105,11 @@ bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 # open thunar
 bindsym $mod+n exec nemo
 
-# open calcurse
-bindsym $mod+i exec alacritty --title "calendar" -e zsh -ic 'calcurse'
+# open notes
+bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e zsh -ic "cd ~/documents/notes &&  vim todo.md" 
+
+# open calendar
+bindsym $mod+c exec alacritty -o 'window.opacity=1' --title "calendar" -e zsh -ic "calcurse" 
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
