--- a/laptop/.config/polybar/config.ini
+++ b/laptop/.config/polybar/config.ini
@@ -72,15 +72,15 @@ label-separator = ""
 
 ; low
 menu-0-0 = "   "
-menu-0-0-exec = redshift -x && redshift -O 4800
+menu-0-0-exec = redshift -O 4800 -P
 menu-0-0-foreground = ${colors.foreground}
 ; mid
 menu-0-1 = "  "
-menu-0-1-exec = redshift -x && redshift -O 4000
+menu-0-1-exec = redshift -O 4000 -P
 menu-0-1-foreground = ${colors.foreground}
 ; high
 menu-0-2 = "  "
-menu-0-2-exec = redshift -x && redshift -O 3200
+menu-0-2-exec = redshift -O 3200 -P
 menu-0-2-foreground = ${colors.foreground}
 
 [module/brightness]
