librewolf name change

--- a/common/.config/picom/picom.conf
+++ b/common/.config/picom/picom.conf
@@ -32,7 +32,7 @@ opacity-rule = [
     "95:class_g = 'Thunar'",
     "93:class_g = 'thunderbird'",
     "90:class_g = 'steam'",
-    "100:class_g = 'LibreWolf'",
+    "100:class_g = 'librewolf'",
     "100:class_g = 'Microsoft-edge'",
     "100:class_g = 'Brave-browser'",
     "100:class_g = 'firefox'",
