--- a/desktop/.config/i3/startup.conf
+++ b/desktop/.config/i3/startup.conf
@@ -4,14 +4,14 @@
 exec --no-startup-id alacritty --config-file ~/.config/alacritty/alacritty.toml --title "primary" 
 
 # Workspace 2: Browser
-exec --no-startup-id brave --new-window
+exec --no-startup-id brave 
 
 # Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
 assign [class="thunderbird"] workspace 3
 
 # Workspace 5: Games
-# exec --no-startup-id steam
+exec --no-startup-id steam
 assign [class="steam"] workspace 9
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 9
 
