copyq change remap

--- a/desktop/.config/i3/remap.conf
+++ b/desktop/.config/i3/remap.conf
@@ -99,7 +99,7 @@ bindsym Control+Mod1+l exec ~/bin/.local/scripts/lock-screen
 bindsym Mod4+Shift+s exec flameshot gui
 
 # clipboard history
-bindsym Mod4+v exec copyq show
+bindsym Mod4+v exec copyq toggle
 
 # hide all
 bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
