add delay before starting btop

--- a/desktop/.config/i3/startup.conf
+++ b/desktop/.config/i3/startup.conf
@@ -21,7 +21,7 @@ assign [class="vesktop"] workspace 10
 
 # Workspace 11: Secondary
 exec --no-startup-id librewolf messenger.com --new-window 
-exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'btop; exec zsh'
+exec --no-startup-id alacritty -o 'font.size=12' --title "secondary" --command sh -c 'sleep 3 && btop; exec zsh'
 exec --no-startup-id alacritty -o 'font.size=12' --title "cava" --command sh -c 'cava; exec zsh'
 
 # exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.90' --title "secondary" --command sh -c 'btop; exec bash'
